# window_basics

./: .gitignore  CMakeLists.txt  MIT-LICENSE  README.md
cmake/: WindowBasicsConfig.cmake.in
src/: core.cpp  core.h  core_configuration.h  layer.cpp  layer.h  main.cpp
